# rexpy

./: .gitignore  LICENSE  README.md  fit.conf  fit_fast.conf  fit_ultrafast.conf  init.sh  ntup.conf  pyproject.toml  rp-init.sh  rx-init.sh  setup.cfg  setup.py  setup.sh
app/: augment-tree-with-npy.cpp
app/include/: cnpy.h
configs/: fit.conf  fit_MC16a.conf  fit_MC16d.conf  fit_MC16e.conf  fit_SR1.conf  fit_SR12.conf  fit_SR13.conf  fit_masscuts.conf  fit_masscuts_mblcuts.conf  fit_massexclude.conf  fit_massexclude_mblcuts.conf  fit_tptrw.conf  ntup_backup.conf
configs/WTA01/: fit.conf  fit_cut_setup2.conf  fit_inclusive.conf
configs/v29/: fit_SR12.conf  fit_SR13.conf  fit_masscut_mblcut.conf  fit_raw.conf
docs/: api_batch.rst  api_confparse.rst  api_helpers.rst  api_resparse.rst  api_shower.rst  api_valplot.rst  conf.py  index.rst
pyutils/: condor_gen.py  gensysblocks.py
randutils/: lcg_setup.sh
rexpy/: __init__.py  blocks.py  confparse.py  constants.py  shower.py  valplot.py
rexuple/: batch.py  confparse.py  constants.py  parse.py  parse_conf.py  vrp.py
scripts/: README.md  init.sh  rp-condor.py  rp-conf.py  rp-init.sh  rx-augment-npy-2.py  rx-augment-npy.py  rx-binning-matrix.py  rx-condor-gen.py  rx-condor.py  rx-conf-gen.py  rx-conf.py  rx-draw-vrp.py  rx-gen-condor-ntup.py  rx-gen-sys-blocks-v29.py  rx-gen-sys-blocks-v30.py  rx-gen-vrp-blocks.py  rx-plot-sys-stability-test.py  rx-plot-years-stability-test.py  rx-rank.py  rx-removereg.py  rx-rmreg.py  rx-stability-test-gen.sh  rx-toggle-asimov.py
src/: atlas-init.sh
src/app/: Makefile  (+1 more)
(+47 files in other folders)
