[metadata]
name = rexpy
author = Doug Davis
author_email = ddavis@cern.ch
maintainer = Doug Davis
maintainer_email = ddavis@cern.ch
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-clause
description = Steer TRExFitter with Python
url = https://github.com/douglasdavis/rexpy
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =src
install_requires =
    click >=7.0

[options.packages.find]
where = src
exclude =
    tests

[bdist_wheel]
universal = 0

[flake8]
extend-ignore = E203, E402, E501, W504

[pylint.messages_control]
disable = C0330, C0326
